
7.26  2017-02-15

7.25  2017-02-09
  - Fixed cleanup bugs in Mojo::IOLoop::Stream.

7.24  2017-02-05
  - Added open method to Mojo::File.
  - Added tempfile function to Mojo::File.
  - Fixed bug in Mojo::Asset::File where the slurp method would not work
    correctly for very large files.

7.23  2017-01-29
  - Added max_request_size attribute to Mojolicious.
  - Added max_response_size attribute to Mojo::UserAgent.
  - Added to_unsafe_string method to Mojo::URL.
  - Added -S option to get command.
  - Fixed a data corruption problem in Mojo::IOLoop::Stream, caused by a
    dependency of IO::Socket::SSL on the internal representation of strings,
    which differs from IO::Socket::IP. (coolo, sri)

7.22  2017-01-25
  - Added ports method to Mojo::Server::Daemon.
  - Added remove_tree method to Mojo::File.
  - Improved spurt method in Mojo::File with support for writing multiple chunks
    at once.

7.21  2017-01-21
  - Added extract_usage function to Mojo::Util.
  - Improve getopt function in Mojo::Util to use @ARGV by default.

7.20  2017-01-18
  - Fixed a bug in Mojo::File where the make_path method would die even if no
    error occurred.
  - Fixed warnings in Mojo::IOLoop::TLS.

7.19  2017-01-14
  - Added module Mojo::IOLoop::TLS.
  - Added can_nnr and can_socks methods to Mojo::IOLoop::Client.

7.18  2017-01-11
  - Fixed support for relative %INC paths in Mojo::Home.
  - Fixed a bug in Mojo::URL where invalid fragment strings could be generated.

7.17  2017-01-11
  - Fixed Windows bugs in Mojo::File. (kmx)

7.16  2017-01-10
  - Fixed Windows bugs in Mojo::File. (kmx)

7.15  2017-01-09
  - Deprecated Mojo::ByteStream::slurp and Mojo::Util::slurp in favor of
    Mojo::File::slurp.
  - Deprecated Mojo::ByteStream::spurt and Mojo::Util::spurt in favor of
    Mojo::File::spurt.
  - Deprecated Mojo::Util::files in favor of Mojo::File::list_tree.
  - Deprecated Mojo::Home::lib_dir, Mojo::Home::parse, Mojo::Home::parts in